--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,7 @@
   </head>
   <body>
     
-    <nav class="navbar navbar-light bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#" style="color: aliceblue;">
-            <img src="https://i.postimg.cc/nz3DKPLw/face-recognition.png" alt="" width="30" height="24">
-       Detecteur 
-        </a>
-        </div>
-      </nav>
+    {% include "partials/menu.html" %}
 
 {% block content %}
 
